# homeassistant-plant

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  DLI.md  MISSING_SENSORS.md  README.md  TIPS.md  Version 1.md  Version 2.md  __init__.py  experiments.md  hacs.json  info.md  manifest.json  pyproject.toml  pytest.ini
.claude/: pr_description.md
.github/: dependabot.yml
.github/workflows/: CI.yml  hacs.yml  release.yml  remove-awaiting-feedback.yml  stale-issues.yml
custom_components/plant/: __init__.py  condition.py  conditions.yaml  config_flow.py  const.py  diagnostics.py  group.py  manifest.json  number.py  plant_helpers.py  plant_meters.py  plant_thresholds.py  sensor.py  services.yaml  strings.json  text.py  trigger.py  triggers.yaml
custom_components/plant/translations/: de.json  dk.json  en.json  es.json  fr.json  hu.json  nb.json  nl.json  pt.json  zh-Hans.json
docs/superpowers/plans/: 2026-06-01-care-attributes.md
docs/superpowers/specs/: 2026-06-01-care-attributes-design.md
examples/: dashboard_all_plants_problems.yaml
scripts/: check_manifest_ha_compat.py
tests/: __init__.py  common.py  conftest.py  test_auto_disable.py  test_config_flow.py  test_diagnostics.py  test_entity_naming.py  test_init.py  test_manifest_ha_compat.py  test_number.py  test_plant_helpers.py  test_problems.py  test_sensor.py  test_services.py  test_translations.py  test_triggers.py  test_websocket.py
tests/fixtures/: __init__.py  openplantbook_responses.py
