[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "home-assistant-plant"
version = "2025.8.0"
description = "Custom Home Assistant integration for plant monitoring"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Olen", email = "olen@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "async-timeout>=4.0.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "syrupy>=4.6.0",
    "black>=24.0.0",
    "ruff>=0.14.0",
    "cronsim>=2.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]

[tool.coverage.run]
source = ["custom_components/plant"]
omit = [
    "tests/*",
    # Legacy unused files - duplicate code from sensor.py and number.py
    "custom_components/plant/plant_meters.py",
    "custom_components/plant/plant_thresholds.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.plant"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # Allow imports not at top of file in tests
